deploy/k8s/base/iotgw-ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iotgw-ui
  labels:
    app.kubernetes.io/part-of: iotgw-ng
